--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -13,66 +13,66 @@
     <link rel="stylesheet" href="../profile/index.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col wd-kanbas-navigation">
-          <ul class="list-group">
-            <li class="list-group-item account">
-              <a href="../account/account.html">
-                <i class="fas fa-user-circle"></i>
-                Account
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="../dashboard/dashboard.html">
-                <i class="fas fa-tachometer-alt"></i>
-                Dashboard
-              </a>
-            </li>
-            <li class="list-group-item active">
-              <a href="#">
-                <i class="fas fa-book"></i>
-                Courses
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-calendar-week"></i>
-                Calender
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-inbox"></i>
-                Inbox
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="far fa-clock"></i>
-                History
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fab fa-octopus-deploy"></i>
-                Studio
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="fas fa-arrow-right"></i>
-                Commons
-              </a>
-            </li>
-            <li class="list-group-item">
-              <a href="#">
-                <i class="far fa-question-circle"></i>
-                Help
-              </a>
-            </li>
-          </ul>
-        </div>
+    <div class="wd-kanbas-navigation">
+      <ul class="list-group">
+        <li class="list-group-item account">
+          <a href="../account/account.html">
+            <i class="fas fa-user-circle"></i>
+            Account
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="../dashboard/dashboard.html">
+            <i class="fas fa-tachometer-alt"></i>
+            Dashboard
+          </a>
+        </li>
+        <li class="list-group-item active">
+          <a href="#">
+            <i class="fas fa-book"></i>
+            Courses
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-calendar-week"></i>
+            Calender
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-inbox"></i>
+            Inbox
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="far fa-clock"></i>
+            History
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fab fa-octopus-deploy"></i>
+            Studio
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="fas fa-arrow-right"></i>
+            Commons
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">
+            <i class="far fa-question-circle"></i>
+            Help
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="">
+      <div class="row wd-margin-80">
         <div class="col wd-assignments">
           <div class="row">
             <div class="col-1 d-flex align-items-center align">
@@ -80,7 +80,7 @@
                 class="fas fa-grip-lines mx-1 wd-red-color wd-font-size-20"
               ></i>
             </div>
-            <div class="col-4 d-flex align-items-center align">
+            <div class="col d-flex align-items-center align">
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mt-3">
                   <li class="breadcrumb-item">
@@ -92,7 +92,7 @@
                 </ol>
               </nav>
             </div>
-            <div class="col-6">
+            <div class="col-2">
               <div class="float-end mt-3 mb-3">
                 <button type="submit" class="btn btn-light">
                   <i class="fas fa-glasses"></i>
@@ -102,16 +102,14 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-11">
+            <div class="col">
               <hr />
             </div>
           </div>
 
           <div class="row">
-            <div class="col-2">
-              <div
-                class="wd-account-navigation wd-account-navigation-assignment"
-              >
+            <div class="col-2 px-0">
+              <div class="wd-account-navigation">
                 <p class="wd-text mt-2">202310_2 Fall 2022 Semest..</p>
                 <ul class="list-group">
                   <li class="list-group-item">
@@ -165,7 +163,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-9">
+            <div class="col">
               <div class="">
                 <div class="row">
                   <div class="col-7">
