--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -72,7 +72,7 @@
         </ul>
       </div>
 
-      <div class="wd-account-navigation">
+      <div class="col-2 wd-account-navigation wd-account-nagivation-profile">
         <ul class="list-group">
           <li class="list-group-item">
             <a href="#">Notifications</a>
@@ -104,7 +104,7 @@
         </ul>
       </div>
 
-      <div class="wd-profile">
+      <div class="col-5 wd-profile mx-3">
         <i class="fas fa-user-circle"></i>
         <h1>Alina Geng</h1>
         <h2>Contact</h2>
@@ -121,13 +121,15 @@
         </a>
       </div>
 
-      <div class="wd-edit-button float-end">
-        <a href="edit.html">
-          <button type="submit" class="btn btn-light">
-            <i class="fas fa-pencil-alt"></i>
-            Edit Profile
-          </button>
-        </a>
+      <div class="col wd-edit-button float-end">
+        <div class="float-end">
+          <a href="edit.html">
+            <button type="submit" class="btn btn-light">
+              <i class="fas fa-pencil-alt"></i>
+              Edit Profile
+            </button>
+          </a>
+        </div>
       </div>
     </div>
   </body>
