--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -72,7 +72,7 @@
         </ul>
       </div>
 
-      <div class="wd-account-navigation">
+      <div class="col-2 wd-account-navigation wd-account-nagivation-profile">
         <ul class="list-group">
           <li class="list-group-item">
             <a href="#">Notifications</a>
@@ -104,7 +104,7 @@
         </ul>
       </div>
 
-      <div class="wd-profile-edit">
+      <div class="col-5 wd-profile-edit">
         <i class="fas fa-user-circle"></i>
         <label for="name" class="form-label"> Name:* </label>
         <input
@@ -188,13 +188,15 @@ Student</textarea
         </div>
       </div>
 
-      <div class="wd-edit-button float-end">
-        <a href="index.html">
-          <button type="submit" class="btn btn-light">
-            <i class="fas fa-pencil-alt"></i>
-            Cancel Editing
-          </button>
-        </a>
+      <div class="col">
+        <div class="float-end">
+          <a href="index.html">
+            <button type="submit" class="btn btn-light m-3">
+              <i class="fas fa-pencil-alt"></i>
+              Cancel Editing
+            </button>
+          </a>
+        </div>
       </div>
     </div>
   </body>
