--- a/public/kanbas/assignments/edit.html
+++ b/public/kanbas/assignments/edit.html
@@ -320,8 +320,34 @@ This assignment describes how to install the development environment for creatin
                     <li class="list-group-item">Terminator</li>
                     <li class="list-group-item">Blade Runner</li>
                     <li class="list-group-item">Lord of the Ring</li>
-                    <li class="list-group-item active">Star Wars</li>
+                    <li class="list-group-item active bg-light">
+                      <div class="text-dark">
+                        <i class="fas fa-plus"></i>
+                        Add
+                      </div>
+                    </li>
                   </ul>
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col">
+                  <hr />
+                </div>
+              </div>
+              <div class="row mb-4">
+                <div class="col">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="notify-change"
+                  />
+                  <label for="notify-change"
+                    >Notify users that this content has changed</label
+                  >
+                  <div class="float-end">
+                    <button type="submit" class="btn btn-light">Cancel</button>
+                    <button type="submit" class="btn btn-danger">Save</button>
+                  </div>
                 </div>
               </div>
             </div>
